# MSI-Explorer

./: .gitignore  .project  .pylintrc  LICENSE  README.md  environment.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build_and_deploy.yml  test_and_deploy.neu  test_and_deploy.yml
docs/: Matlab data in the ibh file.txt  Pull request for _reader.rtf
src/msi_explorer/: .pytest.ini  __init__.py  _analysis.py  _database.py  _maldi_ms_data.py  _metadata.py  _normalization.py  _reader.py  _selection.py  _selection_old.py  _spectre_du_roi.py  _true_mean_spec.py  _widget.py  _writer.py  napari.yaml
src/msi_explorer/_tests/: test_maldi_ms_data.py  test_metadata.py  test_reader.py  test_widget.py  test_writer.py
src/msi_explorer/databases/: Metabolite_database_ver2.csv  test.csv
src/napari_placeholder/: __init__.py  _analysis.py  _database.py  _maldi_ms_data.py  _metadata.py  _reader.py  _selection.py  _true_mean_spec.py  _widget.py  _writer.py  call_reader.py  napari.yaml
src/napari_placeholder/_tests/: test_maldi_ms_data.py  test_metadata.py  test_reader.py  test_widget.py  test_writer.py
src/napari_placeholder/databases/: Metabolite_database_ver1.csv
