[metadata]
name = MSI-Explorer
version = 0.0.6
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MMV-Lab/napari-PLACEHOLDER
author = lennart kowitz
author_email = lennart.kowitz@isas.de
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/MMV-Lab/napari-PLACEHOLDER/issues
    Documentation = https://github.com/MMV-Lab/napari-PLACEHOLDER#README.md
    Source Code = https://github.com/MMV-Lab/napari-PLACEHOLDER
    User Support = https://github.com/MMV-Lab/napari-PLACEHOLDER/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
    pyimzml
    matplotlib
    vaex

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    MSI-Explorer = msi_explorer:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
